# AtomLink

./: .gitignore  HACKATHON_SLIDES.md  MERIDIAN_SLIDES.md  PRESENTATION.md  PRESENTATION_SLIDES.md  README.md  SLIDES.md  contratos_desplegados.txt  direcciondecontrato.txt
atom/: README.md  index.html  package.json  (+3 more)
atom/contracts/: .env-contracts  Cargo.toml  README.md  deploy-guide.md  land-tokenization-simple.rs  marketplace-simple.rs
atom/contracts/interfaces/: Cargo.toml
atom/contracts/interfaces/src/: lib.rs
atom/contracts/land-token/: Cargo.toml
atom/contracts/land-token/src/: lib.rs
atom/contracts/land-tokenization/: Cargo.toml
atom/contracts/land-tokenization-simple/: Cargo.toml
atom/contracts/land-tokenization-simple/src/: lib.rs
atom/contracts/land-tokenization/src/: lib.rs  test.rs
atom/contracts/marketplace/: Cargo.toml
atom/contracts/marketplace-simple/: Cargo.toml
atom/contracts/marketplace-simple/src/: lib.rs
atom/contracts/marketplace-with-payment/: Cargo.toml
atom/contracts/marketplace-with-payment/src/: lib.rs
atom/contracts/marketplace/src/: lib.rs  test.rs
atom/contracts/minimal-test/: Cargo.toml
atom/contracts/minimal-test/src/: lib.rs
atom/contracts/simple-test/: Cargo.toml
atom/contracts/simple-test/src/: lib.rs
atom/contracts/simple-token/: Cargo.toml
atom/contracts/simple-token/src/: lib.rs
atom/contracts/token-sale/: Cargo.toml
atom/contracts/token-sale/src/: lib.rs
atom/contracts/ultra-minimal/: Cargo.toml
atom/contracts/ultra-minimal/src/: lib.rs
atom/contracts/workspace-improved/: Cargo.toml
(+81 files in other folders)
